--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "homepage": "http://framework.zend.com/",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zendframework": "~2.4.11"
+        "zendframework/zendframework": "~2.4.11",
+        "doctrine/doctrine-orm-module": "^0.9.1",
+        "doctrine/migrations": "^1"
     }
 }
